[package]
name = "bum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
crossterm = "0.23.2"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
tui = "0.18.0"
